Ejercicio 7: feature-3 y clase C

--- a/index.html
+++ b/index.html
@@ -22,14 +22,21 @@
       this.claseB = claseB;
     }
   }
+  class C {
+    constructor(claseC) {
+      this.claseC = claseC;
+    }
+  }
+
 
   const objetoA = new A('ValorFoo', 'ValorBar');
   const objetoB = new B('ValorClaseB');
-
+  const objetoC = new C('ValorClaseC');
     // Muestra el objeto en la consola
     console.log(objetoA);
     console.log(objetoB);
-
+    console.log(objetoC);
+    
   </script>
 </body>
 
